# ChatBot

./: .gitignore  Agents.md  README-en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
scripts/: build-ios-unsigned-ipa.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_cmd.rs  lib.rs  main.rs
src/components/desktop/: DesktopChatPanel.tsx  DesktopConversationSidebar.tsx  DesktopLayout.tsx
src/components/mobile/: MobileChatDetail.tsx  MobileChatHome.tsx  MobileLayout.tsx  MobileStack.tsx  (+1 more)
src/contexts/: MobileNavContext.tsx
src/hooks/: useChatPanelState.ts
src/i18n/: locale-no-personas.test.ts
src/lib/: context-compression.ts  conversation-sections.ts  conversation-single.ts  database-schema-single.ts  http.ts  model-icons.tsx  model-utils.ts  platform.ts  reasoning-control-state.ts  reasoning-utils.ts  shiki.ts
src/services/: backup-no-identities.test.ts  backup.ts  built-in-tools.ts  git-tools.ts  openai-chat-sse.ts  openai-responses-sse.ts  provider-headers.ts  provider-service.ts  voice-api.test.ts  voice-api.ts  voice-client.ts  voice-playback.ts  voice-recorder.ts  workspace.ts
src/storage/: database.ts  kv-store.ts
src/stores/: chat-dispatch.ts  chat-generation.ts  chat-message-builder.ts  chat-store-actions.ts  chat-store-core.ts  chat-store.ts  generation-helpers.ts  settings-store.ts  tool-call-loop.ts
src/types/: index.ts
(+33 files in other folders)
